styles.css
@import url('https://fonts.googleapis.com/css?family=Exo+2:300,300i,500,500i');

@-ms-viewport {
  width: device-width;
}

body {
  background-color: #2C2F33;
  margin: 0;
}

.content {
  max-width: 80vw;
  font-family: 'Exo 2', sans-serif;
  font-weight: 300;
  font-size: 16px;
  color: #FFF;
  text-align: center;
  margin: 1em auto;
}

@media only screen and (min-width: 1000px) {
  .content {
    max-width: 800px;
    font-size: 20px;
  }
}

img {
  max-width: 100%;
}

p {
  text-align: justify;
  text-align-last: center;
}

a {
  background: #F71334;
  background: -webkit-linear-gradient(left, #E83693, #F71334);
  background:    -moz-linear-gradient(left, #E83693, #F71334);
  background:      -o-linear-gradient(left, #E83693, #F71334);
  background:         linear-gradient(to right, #E83693, #F71334);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  color: inherit;
  text-decoration: none;
  font-weight: 500;
}

a:hover {
  color: transparent;
}

.section {
  border-top: 2px solid #FFF;
  padding-bottom: 1em;
}

.section:last-child {
  padding-bottom: 0;
}

.left {
  float: left;
  text-align: left;
}

.right {
  float: right;
  text-align: right;
}

#releases div:after {
  content: '';
  clear: both;
  display: block;
}

#staff .members {
  display: grid;
  grid-template-columns: auto auto;
}

#staff .members div:nth-child(odd) {
  text-align: right;
  padding-right: 1em;
  border-right: 2px solid #FFF;
}

#staff .members div:nth-child(even) {
  text-align: left;
  padding-left: 1em;
}

#staff .members img {
  height: 1em;
  margin-left: 1em;
}

.role-lead {
  color: rgb(231, 76, 60);
  font-weight: 500;
}

.role-artist {
  color: rgb(155, 89, 182);
}

.role-writer {
  color: rgb(46, 204, 113);
}

.role-designer {
  color: rgb(233, 30, 99);
}

.role-editor {
  color: rgb(241, 196, 15);
}

.role-developer {
  color: rgb(52, 152, 219);
}

.role-entertainment {
  color: rgb(230, 126, 34);
}

.role-scorewatch {
  color: rgb(153, 45, 34);
}

.role-events {
  color: rgb(26, 188, 156);
}

